# yandex-music-cli

./: Cargo.toml  debug.html
src/: https.rs  main.rs  user.rs
