[package]
name = "music"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
reqwest = { version = "0.13", features = ["rustls", "cookies", "socks", "json"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49", features = ["full"] }
